--- a/src/CombatAnalysis.App/Views/ViewTemplates/BasicTemplateView.xaml
+++ b/src/CombatAnalysis.App/Views/ViewTemplates/BasicTemplateView.xaml
@@ -140,27 +140,24 @@
                                    IsActive="{Binding Step, Converter={StaticResource IntToXAMLBool}, ConverterParameter=-2}"
                                    OnClick="{Binding ChatCommand}"/>
                 </StackPanel>
-                
-                <StackPanel Margin="10 5 0 0" VerticalAlignment="Bottom">
-                    <uc:MenuButton Title="{loc:Loc Settings}" OnClick="{Binding SettingsCommand}" Icon="CogOutline"
-                                   IsActive="{Binding Step, Converter={StaticResource IntToXAMLBool}, ConverterParameter=-3}"/>
-                    <uc:MenuButton Title="{loc:Loc Exit}" OnClick="{Binding CloseCommand}" Icon="Logout"/>
-                </StackPanel>
             </StackPanel>
         </Border>
 
         <Border Grid.Column="2" Grid.ColumnSpan="2" Background="Transparent" Margin="10 5" Height="65"
-                VerticalAlignment="Center" MouseDown="Border_MouseDown" Panel.ZIndex="2">
+                VerticalAlignment="Center" MouseDown="BorderMouseDown" Panel.ZIndex="2">
             <StackPanel HorizontalAlignment="Right">
                 <StackPanel Orientation="Horizontal">
+                    <Button Style="{StaticResource textBoxButton}" Margin="30 0" ToolTip="{loc:Loc Settings}" mvx:Bi.nd="Command SettingsCommand">
+                        <Icon:PackIconMaterial Kind="Wrench" Foreground="White" Width="15" Height="15" />
+                    </Button>
                     <Button Style="{StaticResource textBoxButton}" Click="Minimaze" ToolTip="{loc:Loc MinimazeWindow}">
-                        <Icon:PackIconMaterial Kind="WindowMinimize" Foreground="White" Width="15" Height="15"/>
+                        <Icon:PackIconMaterial Kind="WindowMinimize" Foreground="White" Width="15" Height="15" />
                     </Button>
                     <Button Style="{StaticResource textBoxButton}" Click="Maximaze" ToolTip="{loc:Loc FullScreenWindow}">
-                        <Icon:PackIconMaterial Kind="WindowMaximize" Foreground="White" Width="15" Height="15"/>
+                        <Icon:PackIconMaterial Kind="WindowMaximize" Foreground="White" Width="15" Height="15" />
                     </Button>
                     <Button Style="{StaticResource textBoxButton}" mvx:Bi.nd="Command CloseCommand" ToolTip="{loc:Loc CloseWindow}">
-                        <Icon:PackIconMaterial Kind="WindowClose" Foreground="Red" Width="15" Height="15"/>
+                        <Icon:PackIconMaterial Kind="WindowClose" Foreground="Red" Width="15" Height="15" />
                     </Button>
                 </StackPanel>
                 <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5">
