--- a/src/CombatAnalysis.App/Views/HomeView.xaml
+++ b/src/CombatAnalysis.App/Views/HomeView.xaml
@@ -43,7 +43,8 @@
 
         <TextBlock Grid.Column="3" Grid.Row="0" Text="Details Analysis GCL" VerticalAlignment="Center" Foreground="White" FontSize="20"/>
         
-        <Grid Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="1" Grid.RowSpan="4">
+        <Grid Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="1" Grid.RowSpan="4"
+              IsEnabled="{Binding Basic.AuthorizationIsOpen, Converter={StaticResource BoolToXAMLBool}, ConverterParameter=true}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
