Add secrets in WPF
Save user secrets in WPF via UserSecret extension. That allow hide secrets from customer and do secrets more safety

--- a/src/CombatAnalysis.App/Views/HomeView.xaml
+++ b/src/CombatAnalysis.App/Views/HomeView.xaml
@@ -9,8 +9,8 @@
     xmlns:resx="clr-namespace:CombatAnalysis.App.Localizations.Resources.Home"
     xmlns:local="clr-namespace:CombatAnalysis.App.Views.ViewTemplates"
     xmlns:basicViewModel="clr-namespace:CombatAnalysis.Core.ViewModels.ViewModelTemplates;assembly=CombatAnalysis.Core"
-    xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
     xmlns:mvx="clr-namespace:MvvmCross.Platforms.Wpf.Binding;assembly=MvvmCross.Platforms.Wpf"
+    xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
     loc:LocalizationObject.ResourceManager="{x:Static resx:Resource.ResourceManager}"
     mc:Ignorable="d">
 
@@ -77,7 +77,7 @@
             </Border>
 
             <StackPanel Grid.Row="1">
-                <Button VerticalAlignment="Top" Content="Communication" Width="145" Height="40" FontSize="14" Foreground="White" Cursor="Hand"
+                <Button VerticalAlignment="Top" Content="{loc:Loc Communication}" Width="145" Height="40" FontSize="14" Foreground="White" Cursor="Hand"
                         Style="{StaticResource homeButton}" mvx:Bi.nd="Command OpenLognCommand"
                         Visibility="{Binding ChatIsEnabled, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:true}">
                     <Button.BorderBrush>
@@ -88,7 +88,7 @@
                     </Button.BorderBrush>
                 </Button>
 
-                <Button VerticalAlignment="Top" Content="Communication" Width="145" Height="40" FontSize="14" Foreground="White" Cursor="Hand"
+                <Button VerticalAlignment="Top" Content="{loc:Loc Communication}" Width="145" Height="40" FontSize="14" Foreground="White" Cursor="Hand"
                         Style="{StaticResource homeButton}" mvx:Bi.nd="Command OpenChatCommand"
                         Visibility="{Binding ChatIsEnabled, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}">
                     <Button.BorderBrush>
