--- a/src/CombatAnalysis.App/Windows/RegistrationWindow.xaml
+++ b/src/CombatAnalysis.App/Windows/RegistrationWindow.xaml
@@ -1,17 +1,18 @@
-﻿<views:MvxWindow x:Class="CombatAnalysis.App.Windows.RegistrationWindow"
-                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                 xmlns:converters="clr-namespace:CombatAnalysis.App.Converters"
-                 xmlns:loc="clr-namespace:CombatAnalysis.App.Localizations"
-                 xmlns:resx="clr-namespace:CombatAnalysis.App.Localizations.Resources.CombatLogInformation"
-                 xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
-                 loc:LocalizationObject.ResourceManager="{x:Static resx:Resource.ResourceManager}"
-                 mc:Ignorable="d"
-                 Title="Registration" Height="Auto" Width="450"
-                 ResizeMode="CanResizeWithGrip" Background="#283a4b" 
-                 AllowsTransparency="True" WindowStyle="None" WindowStartupLocation="CenterScreen">
+﻿<views:MvxWindow 
+    x:Class="CombatAnalysis.App.Windows.RegistrationWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:converters="clr-namespace:CombatAnalysis.App.Converters"
+    xmlns:loc="clr-namespace:CombatAnalysis.App.Localizations"
+    xmlns:resx="clr-namespace:CombatAnalysis.App.Localizations.Resources.AuthUser"
+    xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
+    loc:LocalizationObject.ResourceManager="{x:Static resx:Resource.ResourceManager}"
+    mc:Ignorable="d"
+    Title="Registration" Height="Auto" Width="450"
+    ResizeMode="CanResizeWithGrip" Background="#283a4b" 
+    AllowsTransparency="True" WindowStyle="None" WindowStartupLocation="CenterScreen">
     
     <Grid>
         <Grid.Resources>
@@ -37,9 +38,9 @@
         </Border>
 
         <StackPanel Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="0" Grid.RowSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBlock Text="Continue Registration in Browser" HorizontalAlignment="Center" Foreground="White" FontFamily="Comic Sans MS" FontSize="16" Margin="10" />
+            <TextBlock Text="{loc:Loc ContinueAuthInBrowser}" HorizontalAlignment="Center" Foreground="White" FontFamily="Comic Sans MS" FontSize="16" Margin="10" />
             <TextBlock Visibility="{Binding IsVerification, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}"
-                           Text="Verification" HorizontalAlignment="Center" Foreground="White" FontFamily="Comic Sans MS" FontSize="16" Margin="10" />
+                       Text="{loc:Loc Verification}" HorizontalAlignment="Center" Foreground="White" FontFamily="Comic Sans MS" FontSize="16" Margin="10" />
         </StackPanel>
 
         <StackPanel Grid.Row="1" VerticalAlignment="Center">
