--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/combatAuras.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/combatAuras.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     font-size: 0.8em;
     gap: 15px;
+    margin-top: 10px;
 
     &__details {
         display: flex;
@@ -14,6 +15,20 @@
             display: flex;
             gap: 20px;
             width: 100vw;
+
+            &__spell, &__spell_ready {
+                display: flex;
+                align-items: center;
+
+                svg {
+                    color: purple;
+                    font-size: 0.8em;
+                }
+            }
+
+            &__spell_ready {
+                cursor: pointer;
+            }
 
             li {
                 position: relative;
@@ -43,10 +58,43 @@
 .creators {
     display: flex;
     flex-direction: column;
-    gap: 25px;
+    gap: 10px;
 
     .form-control {
         width: 275px;
+    }
+
+    .search {
+        &__aura {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+
+            svg {
+                cursor: pointer;
+            }
+        }
+    }
+
+    .pinned-auras {
+        display: flex;
+        gap: 10px;
+        font-size: 0.8em;
+        overflow-x: scroll;
+
+        li {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 2px 2px 2px 2px purple;
+            border-radius: 10px;
+            padding: 5px 10px;
+            margin: 10px 0;
+            min-width: 125px;
+            min-height: 40px;
+            text-align: center;
+            cursor: pointer;
+        }
     }
 
     &__select-creator {
@@ -56,69 +104,75 @@
         .filter-applied {
             box-shadow: 2px 2px 2px 2px green;
         }
-    }
 
-    .filters, .times {
-        position: relative;
-        font-size: 0.8em;
+        .filters, .times {
+            position: relative;
+            font-size: 0.8em;
 
-        &__controll-panel {
-            display: flex;
-            gap: 15px;
-        }
+            &__controll-panel {
+                display: flex;
+                gap: 15px;
+            }
 
-        &__clear {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+            &__clear {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
 
-        &__aura-filters, &__aura-filters_show, &__aura-times, &__aura-times_show {
-            position: absolute;
-            display: none;
-            flex-direction: column;
-            align-items: center;
-            box-shadow: 2px 2px 2px 2px green;
-            border-radius: 20px;
-            padding: 5px 10px;
-            top: 125%;
-            gap: 5px;
-            background: #0c192c;
-            z-index: 100;
-
-            li {
+            &__aura-filters, &__aura-filters_show, &__aura-times, &__aura-times_show {
+                position: absolute;
+                display: none;
+                flex-direction: column;
+                align-items: center;
+                box-shadow: 2px 2px 2px 2px green;
+                border-radius: 20px;
                 padding: 5px 10px;
-                border-radius: 10px;
-                box-shadow: 1px 1px 1px 1px green;
-                cursor: pointer;
+                top: 125%;
+                gap: 5px;
+                background: #0c192c;
+                z-index: 100;
+
+                li {
+                    padding: 5px 10px;
+                    border-radius: 10px;
+                    box-shadow: 1px 1px 1px 1px green;
+                    cursor: pointer;
+                }
+
+                &_show {
+                    display: flex;
+                }
+
+                .filter-selected {
+                    box-shadow: 1px 1px 1px 1px blue;
+                }
+
+                .btn-shadow {
+                    margin: 5px 0;
+                }
             }
 
-            &_show {
+            &__aura-type-filter {
                 display: flex;
-            }
+                flex-direction: column;
+                gap: 10px;
+                width: 400px;
+                flex-wrap: wrap;
 
-            .filter-selected {
-                box-shadow: 1px 1px 1px 1px blue;
-            }
 
-            .btn-shadow {
-                margin: 5px 0;
+                ul {
+                    display: flex;
+                    gap: 10px;
+                    flex-wrap: wrap;
+                }
             }
         }
 
-        &__aura-type-filter {
+        &__container {
             display: flex;
             flex-direction: column;
-            gap: 10px;
-            width: 400px;
-            flex-wrap: wrap;
-
-
-            ul {
-                display: flex;
-                gap: 10px;
-                flex-wrap: wrap;
-            }
+            gap: 5px;
         }
     }
 }
