Fix Combat aura search
Fixed issue when user search Aura, pin some auras and after that user see only Aura, that he searched

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/myEnvironment/profile.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/myEnvironment/profile.scss
@@ -9,7 +9,7 @@
         &__email-container {
             display: flex;
             flex-direction: column;
-            align-items: start;
+            align-items: flex-start;
             margin: 0 10px;
 
             .email, .verified-email {
@@ -57,7 +57,7 @@
 
             .actions {
                 display: flex;
-                justify-content: end;
+                justify-content: flex-end;
                 gap: 10px;
                 width: 100%;
 
